[project]
name = "metasian"
version = "1.0.0"
description = "OpenEnv DevOps RL Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "requests>=2.32.2",
    "openenv-core>=0.2.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.1"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]